# rust_practice

./: .gitignore  Cargo.toml  LICENSE
migrations/2022-09-08-064133_create_users/: up.sql
src/: lib.rs  main.rs  models.rs  routes.rs  schema.rs
src/forms/: mod.rs
src/routes/: home.rs
static/css/: logReg.css
static/js/: logRegFormLogin.js  logRegFormRegister.js
templates/: home.html  index.html  logReg.html  log_reg.html
views/: featurette.html  game.html  home.html  index.html  links.html  logReg.html  officeQuotes.html  ptable.html  skills.html
