[package]
name = "web_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.1.0"
actix-web-lab = "0.17.0"
argon2 = "0.4.1"
chrono = { version = "0.4.22", features = ["serde"] }
derive_more = "0.99.17"
diesel = { version = "2.0.0", features = ["postgres", "chrono"] }
dotenvy = "0.15.3"
env_logger = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.17"
rand_core = { version = "0.6.3", features = ["std"] }
regex = "1.6.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tera = "1.17.0"
validator = { version = "0.16.0", features = ["derive"] }
